[package]
name = "caduceus"
version = "0.0.1"
authors = ["Jihyeok Seo <me@limeburst.net>"]

description = "Mercurial implementation in Rust"
homepage = "https://github.com/limeburst/caduceus"
repository = "https://github.com/limeburst/caduceus"
readme = "README.md"
license = "GPL-2.0"

[[bin]]
name = "cs"

[dependencies]
ascii = "*"
rustc-serialize = "*"
time = "*"
